# taylorai-studio

./: .gitignore  README.md  bench.ps1  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: llama.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gguf.rs  hardware.rs  lib.rs  main.rs  server.rs  tuner.rs
