[package]
name = "taylorai-studio"
version = "0.1.2"
description = "Runner de GGUF otimizado para CPU/iGPU (llama.cpp)"
authors = ["joaof"]
edition = "2021"

[lib]
name = "taylorai_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
raw-cpuid = "11"
ureq = "2"
rfd = "0.15"

[profile.dev]
incremental = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
