[package]
name = "taylorai-studio"
version = "0.1.6"
description = "Runner de GGUF otimizado para CPU/iGPU (llama.cpp)"
authors = ["joaof"]
edition = "2021"

[lib]
name = "taylorai_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
ureq = "2"
rfd = "0.15"

# raw-cpuid e instrucao CPUID (x86 only); em ARM/Apple Silicon nao se aplica.
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "11"

[profile.dev]
incremental = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
